--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -38,7 +38,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Elixir
-      uses: erlef/setup-elixir@v1.9.0
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ matrix.elixir }}
         otp-version: ${{ matrix.otp }}
