--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -34,6 +34,9 @@ jobs:
           - elixir: 1.12.2
             otp: 24.0.3
 
+          - elixir: 1.14.3
+            otp: 25.2.2
+
     steps:
     - uses: actions/checkout@v2
 
@@ -42,6 +45,7 @@ jobs:
       with:
         elixir-version: ${{ matrix.elixir }}
         otp-version: ${{ matrix.otp }}
+        version-type: strict
 
     - name: Restore dependencies cache
       uses: actions/cache@v2
